# ros_osm

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: transformer_server.yaml
data/: 20170522015032-22254-map.html  20170522015247-22254-map.html  gps_data.txt  gps_viz_data.txt  map.osm  pose_data.txt  test_results.txt  w_data.txt
launch/: collect_data.launch  neq.launch  ros_osm.launch  test_transformer.launch
scripts/: collect_data.py  gmaps.py  information_client.py  information_server.py  transformer_client.py  transformer_server.py  txt_handler.py
srv/: GetInformation.srv  TransformMapToGps.srv
